--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="JS/sketch.js"></script>
     <script src="JS/DFSBackTracker.js"></script>
     <script src="JS/PathFinding.js"></script>
-
+    <script src="JS/MinHeap.js"></script>
 
 
   </head>
@@ -19,26 +19,28 @@
 
   			<div id = "construct">
   				<label>Construction:</label>
-				<select>
-				  <option value="recursiveB">Recursive Backtrack</option>
-				  <option value="kurskal">Kruskal</option>
-				  <option value="prim">Prim's</option>
-				</select>
-				<button type="button" >Generate!</button>
+
+  				<select>
+  				  <option value="recursiveB">Recursive Backtrack</option>
+  				  <option value="kurskal">Kruskal</option>
+  				  <option value="prim">Prim's</option>
+  				</select>
+
+				  <button type="button" >Generate!</button>
   			</div>
 			
   			<div id = "solve">
   				<label>Solution:</label>
 
-				<select onchange="chooseMeth(this.value)">
-				  <option value="bfs">BFS</option>
-				  <option value="dfs">DFS</option>
-				  <option value="aStar">A*</option>
-				</select>
+          <select onchange="chooseMeth(this.value)">
+  				  <option value="bfs">BFS</option>
+  				  <option value="dfs">DFS</option>
+  				  <option value="aStar">A*</option>
+				  </select>
 
 				<button type="button" onclick="constructMeth()">Solve!</button>
   			</div>
-		</div>
+		  </div>
   	</div>
   </body>
 </html>
