--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
    <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/addons/p5.dom.js"></script>
 
-    <script  src="JS/Cell.js"></script>
-    <script src="JS/sketch.js"></script>
-    <script src="JS/DFSBackTracker.js"></script>
-    <script src="JS/PathFinding.js"></script>
-    <script src="JS/MinHeap.js"></script>
+  <!-- View -->
+    <script src="JS/View/sketch.js"></script>
+
+  <!--Controller -->
+  <script src="JS/Controller/controller.js"></script>
+
+   <!-- Maze Class -->
+    <script src="JS/Models/Grid.js"></script>
+    <script src="JS/Models/Cell.js"></script>
+
+    <!-- Constructor -->
+    <script src="JS/Models/Constructor/Constructor.js"></script>
+    <script src="JS/Models/Constructor/RecursiveBackTracker.js"></script>
+    <script src="JS/Models/Constructor/Kurskal.js"></script>
+    <script src="JS/Models/Constructor/DisjointSet.js"></script>
+    <script src="JS/Models/Constructor/Prim.js"></script>
+
+    <!-- Solver -->
+    <script src="JS/Models/Solver/PathFinding.js"></script>
+    <script src="JS/Models/Solver/BFS.js"></script>
+    <script src="JS/Models/Solver/DFS.js"></script>
+    <script src="JS/Models/Solver/AStar.js"></script>
+  
+    
+    <script src="JS/Models/MinHeap.js"></script>
 
 
   </head>
@@ -20,13 +40,13 @@
   			<div id = "construct">
   				<label>Construction:</label>
 
-  				<select>
+  				<select onchange="chooseConstructor(this.value)">
   				  <option value="recursiveB">Recursive Backtrack</option>
   				  <option value="kurskal">Kruskal</option>
   				  <option value="prim">Prim's</option>
   				</select>
 
-				  <button type="button" >Generate!</button>
+				  <button type="button" onclick="selectConstructor()">Generate!</button>
   			</div>
 			
   			<div id = "solve">
@@ -35,10 +55,10 @@
           <select onchange="chooseMeth(this.value)">
   				  <option value="bfs">BFS</option>
   				  <option value="dfs">DFS</option>
-  				  <option value="aStar">A*</option>
+  				  <option value="aStar">A* (Manhanttan)</option>
 				  </select>
 
-				<button type="button" onclick="constructMeth()">Solve!</button>
+				<button type="button" onclick="selectMeth()">Solve!</button>
   			</div>
 		  </div>
   	</div>
