Kruskal Algo works

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Constructor -->
     <script src="JS/Models/Constructor/Constructor.js"></script>
     <script src="JS/Models/Constructor/RecursiveBackTracker.js"></script>
-    <script src="JS/Models/Constructor/Kurskal.js"></script>
+    <script src="JS/Models/Constructor/Kruskal.js"></script>
     <script src="JS/Models/Constructor/DisjointSet.js"></script>
     <script src="JS/Models/Constructor/Prim.js"></script>
 
@@ -42,7 +42,7 @@
 
   				<select onchange="chooseConstructor(this.value)">
   				  <option value="recursiveB">Recursive Backtrack</option>
-  				  <option value="kurskal">Kruskal</option>
+  				  <option value="kruskal">Kruskal</option>
   				  <option value="prim">Prim's</option>
   				</select>
 
