all bugs are fixed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <div id="shapes">
-            <label>Cell Shapes:</label>
+            <label>Cell Shape:</label>
             <select id ="selectShape" >
               <option value="rectangular">Rectangular</option>
               <option value="hexagonal">Hexagonal</option>
